Initial commit: NSE Option Chain Analyzer

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,13 +1,17 @@
-# Set default behavior to automatically normalize line endings
-* text=auto
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+.env
+venv/
+ENV/
+env/
 
-# Explicitly declare text files you want to normalize
-*.py text
-*.txt text
-*.md text
+# Streamlit
+.streamlit/
 
-# Binary files (do not change line endings)
-*.png binary
-*.jpg binary
-*.gif binary
-*.pdf binary
+# OS
+.DS_Store
+Thumbs.db
